Alterei a informação da copy

--- a/cursosjs/aula12ex/ex015/modelo.html
+++ b/cursosjs/aula12ex/ex015/modelo.html
@@ -24,7 +24,7 @@
     </section>
 
     <footer>
-        <p>&copy;CursoemVídeo</p>
+        <p>&copy;Renata Patrícia</p>
         
     </footer>
 
